--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,10 @@ body {
 	font-family: 'Abel', sans-serif;
 	font-style: normal;
 	font-weight: 400;
+}
+.wrapper {
 	max-width: 1440px;
-	margin: 0;
+	margin: 0 auto;
 }
 .main {
 	padding: 40px 150px;
