--- a/css/flex.css
+++ b/css/flex.css
@@ -12,6 +12,11 @@
 	display: flex;
 	justify-content: space-between;
 }
+.banner__button {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
 .banner__wrapper {
 	display: flex;
 	flex-direction: column;
