--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ body {
 	background-color: #FAFAFA;
 }
 /*  Стили для меню */
+.menu__adaptive {
+	display: none;
+}
 .menu__item {
 	font-size: 17px;
 	color: #373737;
@@ -49,6 +52,7 @@ body {
 	border-radius: 11px;
 	padding: 9px 38px;
 }
+
 
 /* Анимация при наведении на кнопку */
 .header__button:hover {
@@ -93,6 +97,9 @@ body {
 	width: 262px;
 	height: 64px;
 }
+.button:hover {
+	cursor: pointer;
+}
 .button__small {
 	width: 226px;
 }
@@ -102,11 +109,11 @@ body {
 }
 
 .banner__img--girl {
-	/* max-width: 100%;
-	height: ; */
 	position: relative;
 	z-index: 2;
 	padding-right: 35px;
+	/* width: 100%;
+	height: 100%; */
 }
 .banner__img--oval {
 	position: absolute;
@@ -135,6 +142,7 @@ body {
 	font-size: 37px;
 	color: #373737;
 	text-align: center;
+	margin: 76px 0 30px 0;
 }
 .subtitle {
 	font-size: 22px;
@@ -204,6 +212,10 @@ body {
 	color: #37474F;
 	line-height: 31px;
 }
+.action__title {
+	font-size: 37px;
+	color: #373737;
+}
 .footer {
 	background-color: #717CFF;
 	padding: 64px 145px 45px 145px;
@@ -233,16 +245,17 @@ body {
 	padding-top: 125px;
 }
 .social__icon {
-	padding-right: 1%;
+	padding-left: 2%;
 }
 .social {
-	padding-bottom: 4%;
+	padding-bottom: 10%;
 }
 .featured {
-	padding: 55px 0px 100px 0px;
+	padding: 38px 0px 100px 0px;
 }
+
 .featured__title {
-	margin-bottom: 85px;
+	margin-bottom: 89px;
 }
 .services__header {
 	padding-top: 120px;
