--- a/css/media.css
+++ b/css/media.css
@@ -3,6 +3,9 @@
 		padding-left: 50px;
 		padding-right: 50px;
 	}
+	.footer {
+		padding: 20px 50px;
+	}
 	.menu__item {
 		display: none;
 	}
@@ -51,17 +54,433 @@
 		width: 235px;
     	height: 54px;
 	}
-	.news__card {
-		max-width: 30%;
-		flex-basis: 30%;
-		margin-right: 50px;
+	.banner__button {
+		margin-top: 55px;
 	}
-	.news__img {
-		width: 100%;
+	/* .news__card {
+		position: relative;
+	} */
+	.news__img img {
+		max-width: 100%;
+		height: auto;
+		/* object-fit: cover; */
+	}
+	.news__text {
+		font-size: 20px;
+	}
+	.countries__wrapper {
+		padding-bottom: 100px;
 	}
 	.countries__card {
 		max-width: 30%;
 		margin-right: 50px;
 		flex-basis: 30%;
+	}
+	.featured__img:last-child {
+		display: none;
+	}
+	.services__header {
+		padding-top: 50px;
+	}
+	.news__title {
+		padding-top: 50px;
+	}
+	.event__title {
+		padding-top: 50px;
+	}
+	.countries__title {
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
+	.countries__img img{
+		max-width: 100%;
+		height: auto;
+	}
+	.testimonial__title {
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
+	.testimonial__card {
+		margin-left: 30px;
+	}
+
+}
+
+@media screen and (max-width: 768px) {
+	.container {
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+	.title {
+	 font-size: 33px;
+	}
+	.subtitle {
+		font-size: 18px;
+	}
+	.banner__img--girl {
+		position: absolute;
+		right: 50px;
+		width: 46%;
+		height: auto;
+	}
+	.banner {
+		padding-top: 50px;
+	}
+	.social {
+		padding-top: 20px;
+		padding-bottom: 10px;
+	}
+	.banner__button {
+		margin-top: 20px;
+	}
+	.banner__img--girl {
+		position: flex;
+	}
+	.banner__img--oval {
+	   right: -422px;
+    	bottom: -167px;
+	}
+	.subtitle__left {
+		line-height: 32px;
+		font-size: 16px;
+		margin-right: 250px;
+		text-align: justify;
+	}
+	.button {
+		width: 200px;
+		height: 50px;
+	}
+	.button__text {
+		font-size: 19px;
+	}
+	.featured__img {
+		width: 25%;
+		height: auto;
+	}
+	.featured__title {
+		margin-top: ;
+    margin-bottom: 60px;
+	}
+	.services__header {
+		padding-top: 0px;
+	}
+	.subtitle {
+		width: 100%;
+		line-height: 32px;
+	}
+	.services__wrapper {
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
+	.services__card {
+		flex-basis: 38%;
+	}
+	.news__title {
+		padding-top: 0px;
+	}
+	.news__text {
+    font-size: 17px;
+	}
+	.news__button {
+    padding-top: 100px;
+    padding-bottom: 100px;
+	}
+	.event__title {
+		padding-top: 0px;
+	}
+	.event__location-text {
+	 font-size: 20px;
+	}
+	.event__big-text {
+	 font-size: 22px;
+	}
+	.event__mini-text {
+	 font-size: 15px;
+	}
+	.event__description-text {
+	 font-size: 14px;
+	}
+	.event__time-text {
+	 font-size: 14px;
+	}
+	.countries__title {
+		padding-top: 0px;
+	}
+	.countries__text {
+    font-size: 20px;
+	}
+	.countries__card {
+    margin-right: 30px;
+	}
+	.countries__card:last-child {
+		margin-right: 0px;
+	}
+	.card__text {
+    font-size: 14px;
+    text-align: justify;
+    line-height: 25px;
+	}
+	.testimonial__title {
+		padding-top: 0px;
+	}
+	.testimonial__card:last-child {
+		display: none;
+	}
+	.testimonial__card{
+		margin-right: 0px;
+		margin-left: 0px;
+	}
+	.testimonial__wrapper {
+    justify-content: space-around;
+	}
+	.testimonial__text {
+		font-size: 15px;
+	}
+	.testimonial__wrapper {
+    padding-bottom: 130px;
+	}
+	.action__title {
+    font-size: 30px;
+	}
+	.action {
+	 justify-content: space-around;
+	 padding-top: 70px;
+    padding-bottom: 70px;
+	}
+	.footer__text {
+    font-size: 15px;
+	}
+	.footer__menu-item {
+    line-height: 32px;
+	}
+	.footer__icon {
+    margin-right: 20px;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.banner__title {
+   	font-size: 40px;
+	}
+	.subtitle__left {
+		line-height: 25px;
+		margin-top: 17px;
+		margin-right: 200px;
+		text-align: left;
+	}
+	.social {
+    padding-bottom: 1px;
+	}
+	.banner {
+    padding-top: 30px;
+}
+	.banner__img--girl {
+    right: 0px;
+    top: 48px;
+	 width: 53%;
+	}
+	.banner__img--oval {
+    right: -288px;
+    top: 74px;
+	}
+	.logo img {
+		width: 80%;
+		height: auto;
+	}
+	.menu__adaptive::after {
+    bottom: 28px;
+	}
+	.menu__adaptive::before {
+    top: 17px;
+	}
+	.featured {
+		padding-bottom: 75px;
+	}
+	.card__title {
+		font-size: 20px;
+	}
+	.card__img {
+		width: 50px;
+		height: 50px;
+	}
+	.services__card {
+		padding: 20px;
+	}
+	.button-more__img {
+		width: 20px;
+		height: 20px;
+	}
+	.button-more__link {
+    font-size: 15px;
+	}
+	.news__title {
+    padding-bottom: 75px;
+	}
+	.date__wrapper {
+    padding-left: 18px;
+    padding-right: 18px;
+	}
+	.news__text {
+	 font-size: 14px;
+	 line-height: 22px;
+	}
+	.news__button {
+    padding-top: 80px;
+    padding-bottom: 80px;
+	}
+	/* .event__wrapper {
+		flex-wrap: wrap;
+	} */
+	.event__card {
+		padding: 20px;
+	}
+	.event__location-text {
+		margin: 0;
+	}
+	.event__title {
+    	padding-bottom: 70px;
+	}
+	.card__text {
+		line-height: 23px;
+	}
+	.event__link {
+		flex-direction: column-reverse;
+		align-items: center;
+	}
+	.event__time {
+		padding-bottom: 15px;
+	}
+	/* .button-more {
+		justify-content: center;
+	} */
+	.button-more__img {
+    	margin-left: 11px;
+	}
+	.event__wrapper {
+    	padding-bottom: 100px;
+	}
+	.testimonial__text {
+    	line-height: 21px;
+	}
+	.testimonial__card {
+	 	flex-basis: 40%;
+		padding: 20px;
+	}
+	.action__title {
+    	font-size: 25px;
+	}
+	.button {
+    	width: 190px;
+	}
+	.footer__icon {
+    	margin-right: 12px;
+	}
+	.footer__text {
+    	font-size: 12px;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.menu__adaptive::after {
+    	bottom: 25px;
+	}
+	.banner__title {
+    	font-size: 30px;
+	}
+	.subtitle__left {
+	 	font-size: 14px;
+		line-height: 20px;
+		margin-right: 118px;
+	}
+	.button__text {
+    	font-size: 15px;
+	}
+	.button {
+	 	width: 128px;
+	 	height: 43px;
+	}
+	.featured__title {
+		margin-bottom: 25px;
+		font-size: 20px;
+		letter-spacing: 1.1px;
+	}
+	.title {
+	 	font-size: 30px;
+	 	line-height: 25px;
+	}
+	.services__wrapper {
+		flex-direction: column;
+	}
+	.card__mobile {
+		display: flex;
+		align-items: center;
+	}
+	.card__title {
+		margin-left: 20px;
+	}
+	.news__wrapper {
+		flex-direction: column;
+		align-items: center;
+	}
+	.news__card {
+		margin-bottom: 20px;
+	}
+	.news__card {
+		max-width: 80%;
+	}
+	.event__date {
+    	width: 55px;
+    	height: 55px;
+	}
+	.event__location-text {
+    	font-size: 20px;
+	}
+	.event__card {
+    	flex-basis: 70%;
+	}
+	.event__wrapper {
+	 	flex-direction: column;
+    	align-items: center;
+	}
+	.event__link {
+		flex-direction: row;
+		align-items: center;
+		justify-content: space-around;
+	}
+	.event__time {
+		padding-bottom: 0%;
+	}
+	.event__card {
+		margin-bottom: 20px;
+	}
+	.countries__wrapper {
+    	display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.countries__card {
+		max-width: 80%;
+		margin: 0 auto;
+	}
+	.countries__card:last-child {
+		margin: 0 auto;
+	}
+	.countries__card:nth-child(-n+2) {
+		margin-bottom: 20px;
+	}
+	.testimonial__wrapper {
+		flex-direction: column;
+	}
+	.testimonial__card:first-child {
+		margin-bottom: 20px;
+	}
+}
+
+@media screen and (max-width: 320px) {
+	/* .banner__img--oval {
+		display: none;
+	} */
+	.main {
+		margin: 0 auto;
 	}
 }
