--- a/css/style.css
+++ b/css/style.css
@@ -107,19 +107,25 @@ body {
 	font-size: 22px;
 	color: #FFFFFF;
 }
+/* .banner__img {
 
+} */
 .banner__img--girl {
 	position: relative;
-	z-index: 2;
-	padding-right: 35px;
-	/* width: 100%;
-	height: 100%; */
+	/* z-index: 2;
+	padding-right: 35px; */
+	/* width: 470px;
+	height: 565px;
+	max-width: 100%;
+	height: auto;
+	display: block; */
 }
 .banner__img--oval {
+	max-width: 100%;
 	position: absolute;
 	z-index: 0;
-	right: -560px;
-	bottom: -95px;
+	right: -600px;
+	bottom: -90px;
 }
 .banner {
 	position: relative;
@@ -135,9 +141,7 @@ body {
 	margin: 0px;
 	letter-spacing: 2.1px;
 }
-.featured__img {
-	max-width: 100%;
-}
+
 .title {
 	font-size: 37px;
 	color: #373737;
@@ -203,6 +207,9 @@ body {
 	font-size: 16px;
 	color: #373737;
 }
+.button-more__link {
+	text-decoration: none;
+}
 .people__name {
 	font-size: 22px;
 	color: #37474F;
@@ -216,9 +223,12 @@ body {
 	font-size: 37px;
 	color: #373737;
 }
+.footer__wrapper {
+	max-width: 1200px;
+}
 .footer {
 	background-color: #717CFF;
-	padding: 64px 145px 45px 145px;
+	/* padding: 64px 145px 45px 145px; */
 }
 .footer__menu {
 	list-style-type: none;
@@ -251,7 +261,7 @@ body {
 	padding-bottom: 10%;
 }
 .featured {
-	padding: 38px 0px 100px 0px;
+	padding: 50px 0px 100px 0px;
 }
 
 .featured__title {
