--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,19 @@ body {
 	max-width: 1200px;
 	margin: 0 auto;
 }
+.banner__oval {
+	position: absolute;
+	display: flex;
+	width: 1030px;
+	height: 581px;
+	left: 62%;
+   top: 39%;
+	background: linear-gradient(189.79deg, #8471FF 8.03%, #717CFF 53.55%);
+	mix-blend-mode: normal;
+	opacity: 0.7;
+	border-radius: 50%;
+	z-index: -1;
+}
 .background-grey {
 	background-color: #FAFAFA;
 }
@@ -107,28 +120,17 @@ body {
 	font-size: 22px;
 	color: #FFFFFF;
 }
-/* .banner__img {
-
-} */
+.banner__img {
+	display: flex;
+	justify-content: end;
+	align-items: flex-end;
+}
 .banner__img--girl {
 	position: relative;
-	/* z-index: 2;
-	padding-right: 35px; */
-	/* width: 470px;
-	height: 565px;
-	max-width: 100%;
-	height: auto;
-	display: block; */
-}
-.banner__img--oval {
-	max-width: 100%;
-	position: absolute;
-	z-index: 0;
-	right: -600px;
-	bottom: -90px;
 }
 .banner {
 	position: relative;
+	z-index: 1;
 }
 .wrapper {
 	overflow: hidden;
@@ -186,6 +188,7 @@ body {
 }
 .news__img {
 	margin-bottom: 28px;
+	max-width: 100%;
 }
 .event__big-text {
 	font-size: 27px;
@@ -225,10 +228,12 @@ body {
 }
 .footer__wrapper {
 	max-width: 1200px;
+	margin: 0 auto;
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 .footer {
 	background-color: #717CFF;
-	/* padding: 64px 145px 45px 145px; */
 }
 .footer__menu {
 	list-style-type: none;
@@ -243,6 +248,9 @@ body {
 }
 .footer__icon {
 	margin-right: 28px;
+}
+.logo__footer-mobile {
+	display: none;
 }
 
 
@@ -338,4 +346,7 @@ body {
 .action {
 	padding-top: 95px;
 	padding-bottom: 85px;
+}
+.corporation {
+	padding-top: 5%;
 }
