--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,9 @@
+/* @media screen and (max-width: 1400px) {
+	.event__card {
+		flex-basis: 41%;
+	}
+} */
+
 @media screen and (max-width: 1200px) {
 	.container {
 		padding-left: 50px;
@@ -101,7 +107,12 @@
 	}
 
 }
-
+/* @media screen and (max-width: 992px) {
+	.event__card {
+		flex-basis: 30%;
+		margin-left: 34px;
+	} */
+}
 @media screen and (max-width: 768px) {
 	.container {
 		padding-left: 30px;
@@ -181,6 +192,9 @@
     padding-top: 100px;
     padding-bottom: 100px;
 	}
+	/* .event__card {
+		flex-basis: 22%;
+	} */
 	.event__title {
 		padding-top: 0px;
 	}
@@ -253,7 +267,11 @@
     margin-right: 20px;
 	}
 }
-
+/* @media screen and (max-width: 650px) {
+	.event__card {
+		flex-basis: 40%;
+	} */
+}
 @media screen and (max-width: 600px) {
 	.banner__title {
    	font-size: 40px;
@@ -328,6 +346,7 @@
 		flex-wrap: wrap;
 	} */
 	.event__card {
+		flex-basis: 37%;
 		padding: 20px;
 	}
 	.event__location-text {
@@ -340,12 +359,12 @@
 		line-height: 23px;
 	}
 	.event__link {
-		flex-direction: column-reverse;
+		flex-direction: row;
 		align-items: center;
 	}
-	.event__time {
+	/* .event__time {
 		padding-bottom: 15px;
-	}
+	} */
 	.button-more__img {
     	margin-left: 11px;
 	}
@@ -429,7 +448,8 @@
     	font-size: 20px;
 	}
 	.event__card {
-    	flex-basis: 70%;
+		flex-basis: 30%;
+		margin-left: 21px;
 	}
 	.event__wrapper {
 	 	flex-direction: column;
@@ -549,6 +569,9 @@
 	.news__button {
 		padding-top: 40px;
 		padding-bottom: 40px;
+	}
+	.event__card {
+		margin-left: 22px;
 	}
 	.event__time-text {
     	font-size: 10px;
