--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,4 +59,5 @@ $subtitle_fz: 22px;
 @import "news-block";
 @import "event-block";
 @import "slider-coutries";
-@import "testimonials-slider"
+@import "testimonials-slider";
+@import "footer";
