--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,6 @@
 /* line 58, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_header.scss */
 .button {
   padding-left: 35px;
-  margin-top: 20px;
   background-color: #717CFF;
   border: none;
   border-radius: 11px;
@@ -129,26 +128,27 @@
   text-align: left;
 }
 
-/* line 68, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_header.scss */
+/* line 67, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_header.scss */
 .banner__button {
   width: 262px;
   height: 64px;
 }
 
-/* line 72, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_header.scss */
+/* line 71, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_header.scss */
 .button__arrow {
   margin-left: 50px;
   fill: #373737;
 }
 
-/* line 78, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_header.scss */
+/* line 77, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_header.scss */
 .banner__content {
   margin-top: 50px;
 }
 
-/* line 81, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_header.scss */
+/* line 80, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_header.scss */
 .banner__subtitle {
   width: 82%;
+  margin-bottom: 20px;
   font-size: 22px;
   line-height: 38px;
   color: #7D7D7D;
@@ -470,8 +470,127 @@
 }
 
 /* line 1, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_testimonials-slider.scss */
+.testimonial__wrapper {
+  padding-bottom: 196px;
+}
+
+/* line 4, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_testimonials-slider.scss */
 .testimonial__slide {
-  width: 503px;
+  max-width: 503px;
+  padding: 35px;
+}
+
+/* line 8, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_testimonials-slider.scss */
+.people {
+  display: flex;
+}
+
+/* line 11, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_testimonials-slider.scss */
+.testimonial__text {
+  font-size: 18px;
+  line-height: 31px;
+}
+
+/* line 15, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_testimonials-slider.scss */
+.people__card {
+  display: flex;
+  flex-direction: column;
+  margin-left: 28px;
+  margin-bottom: 30px;
+}
+
+/* line 21, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_testimonials-slider.scss */
+.people__name {
+  font-size: 22px;
+  color: #37474F;
+}
+
+/* line 25, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_testimonials-slider.scss */
+.people__proffesion {
+  font-size: 18px;
+}
+
+/* line 1, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.action {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 82px 150px 74px 150px;
+}
+
+/* line 7, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.action__title {
+  font-size: 37px;
+}
+
+/* line 11, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.bg-violet {
+  background-color: #717CFF;
+  padding-top: 64px;
+  padding-bottom: 45px;
+}
+
+/* line 16, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+/* line 21, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.logo__footer {
+  margin-bottom: 25px;
+}
+
+/* line 24, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.footer__icon {
+  margin-left: 28px;
+  fill: #fff;
+}
+
+/* line 28, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.footer__icon:nth-child(1) {
+  margin-left: 0px;
+}
+
+/* line 31, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.footer__text {
+  color: #fff;
+  font-size: 18px;
+}
+
+/* line 35, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.footer__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* line 40, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.footer__menu {
+  margin-right: 100px;
+}
+
+/* line 43, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.footer__menu-item {
+  line-height: 49px;
+}
+
+/* line 46, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.address {
+  display: flex;
+  flex-direction: column;
+}
+
+/* line 50, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.footer__nav {
+  display: flex;
+}
+
+/* line 53, ../../../../../../../../../../../../../Users/mojave/Desktop/it_insiders_one/scss/_footer.scss */
+.corporation {
+  display: block;
+  margin-top: 40px;
 }
 
 /*# sourceMappingURL=main.css.map */
