--- a/scss/_testimonials-slider.scss
+++ b/scss/_testimonials-slider.scss
@@ -1,3 +1,27 @@
-.testimonial__slide {
-	width: 503px;
+.testimonial__wrapper {
+	padding-bottom: 196px;
 }
+	.testimonial__slide {
+		max-width: 503px;
+		padding: 35px;
+	}
+		.people {
+			display: flex;
+		}
+			.testimonial__text {
+				font-size: 18px;
+				line-height: 31px;
+			}
+			.people__card {
+				display: flex;
+				flex-direction: column;
+				margin-left: 28px;
+				margin-bottom: 30px;
+			}
+				.people__name {
+					font-size: 22px;
+					color: #37474F;
+				}
+				.people__proffesion {
+					font-size: 18px;
+				}
