адаптивная верстка без слайдеров

--- a/scss/_slider-university.scss
+++ b/scss/_slider-university.scss
@@ -3,6 +3,7 @@
 }
 .featured__title {
 	font-size: 23px;
+	letter-spacing: 2.1px;
 	text-transform: uppercase;
 	text-align: center;
 	padding-top: 55px;
