--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -47,6 +47,9 @@
 			display: flex;
 			flex-direction: column;
 		}
+		.address__mobile {
+			display: none;
+		}
 		.footer__nav {
 			display: flex;
 		}
@@ -54,3 +57,75 @@
 		display: block;
 		margin-top: 40px;
 	}
+
+	@media screen and (max-width: 1200px) {
+		.action {
+			padding: 80px 100px 70px 100px;
+		}
+}
+
+	@media screen and (max-width: 960px) {
+		.footer__menu {
+    margin-right: 49px;
+		}
+	}
+
+	@media screen and (max-width: 768px) {
+		.action {
+			padding: 50px;
+		}
+			.action__title {
+   			font-size: 24px;
+			}
+		.logo__footer {
+   		margin-bottom: 15px;
+		}
+		.footer__text {
+			font-size: 16px;
+		}
+		.footer__icon {
+   		margin-left: 10px;
+		}
+		.footer__menu-item {
+   		line-height: 35px;
+		}
+		.bg-violet {
+   		padding-top: 25px;
+   		padding-bottom: 30px;
+		}
+		.corporation {
+			margin-top: 15px;
+		}
+	}
+@media screen and (max-width: 425px) {
+
+	.action {
+		flex-direction: column;
+	}
+		.action__title {
+			padding-bottom: 35px;
+		}
+	.footer {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+		.footer__social {
+			margin-top: 20px;
+		}
+		.footer__icon {
+			margin-bottom: 15px;
+		}
+		.address {
+			display: none;
+		}
+		.address__mobile {
+			display: block;
+		}
+}
+
+@media screen and (max-width: 320px) {
+	.action {
+		padding-right: 5px;
+		padding-left: 5px;
+	}
+}
