--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,6 +5,7 @@ $light_grey_color: #7D7D7D;
 $title_fz: 37px;
 $subtitle_fz: 22px;
 
+//стили меню и главного баннера
 .header {
 	@include flex-element;
 	align-items: center;
@@ -70,6 +71,7 @@ $subtitle_fz: 22px;
 	}
 	.button__arrow {
 		margin-left: 50px;
+		vertical-align: middle;
 		fill: $grey_color;
 	}
 
@@ -110,11 +112,160 @@ $subtitle_fz: 22px;
 	position: absolute;
 	width: 1030px;
 	height: 581px;
-	left: 62%;
-   top: 39%;
+	left: 61%;
+   top: 28%;
 	background: linear-gradient(189.79deg, #8471FF 8.03%, #717CFF 53.55%);
 	opacity: 0.7;
 	border-radius: 50%;
 	z-index: -1;
-	// overflow: hidden;
+}
+
+//адаптивная верстка меню и главного баннера
+
+@media screen and (max-width: 1200px) {
+	.container {
+		max-width: 1000px;
+	}
+	.menu_list .menu_item {
+   	margin-left: 72px;
+	}
+	.banner__img {
+		vertical-align: bottom;
+	}
+	.social {
+   	margin-top: 40px;
+	}
+}
+@media screen and (max-width: 960px) {
+	.container {
+		max-width: 860px;
+	}
+	.menu_list .menu_item {
+   	margin-left: 40px;
+	}
+	.banner__title {
+   	font-size: 46px;
+	}
+	.banner__subtitle {
+			width: 87%;
+			font-size: 18px;
+			line-height: 35px;
+	}
+	.banner__img--girl {
+		width: 400px;
+		height: auto;
+	}
+	.banner__flex {
+   	margin-top: 50px;
+	}
+	.banner__button {
+   	width: 240px;
+   	height: 55px;
+	}
+	.social {
+   	margin-top: 30px;
+	}
+	.social__icon--fb {
+		margin-left: 0px;
+	}
+	.banner__subtitle {
+   	margin-bottom: 15px;
+   	margin-top: 20px;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.container {
+		max-width: 700px;
+	}
+	.header {
+   	padding-top: 15px;
+	}
+
+	.banner__flex {
+   	margin-top: 0px;
+	}
+	.banner__subtitle {
+   	width: 100%;
+	}
+		.banner__img--girl {
+			display: block;
+			width: 320px;
+			margin-top: 84px;
+		}
+		.banner__oval {
+			left: 45%;
+		}
+	.menu {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 425px) {
+	.container {
+		max-width: 370px;
+	}
+	.banner__title {
+   	width: 150%;
+	}
+	.banner__subtitle {
+   	line-height: 26px;
+		width: 114%;
+	}
+	.social {
+   	margin-top: 20px;
+	}
+	.banner__img--girl {
+   	width: 240px;
+   	margin-top: 234px;
+		margin-top: 198px;
+	}
+	.banner__oval {
+   	left: 56%;
+		width: 675px;
+   	height: 443px;
+	}
+	.banner__button {
+		width: 200px;
+	}
+		.button__arrow {
+   		margin-left: 20px;
+	}
+}
+
+@media screen and (max-width: 375px) {
+	.container {
+		max-width: 350px;
+	}
+}
+
+@media screen and (max-width: 320px) {
+	.container {
+		max-width: 280px;
+	}
+	.banner__content {
+   	margin-top: 25px;
+	}
+	.banner__img--girl {
+   	margin-top: 180px;
+	}
+	.banner__title {
+   	font-size: 38px;
+	}
+	.banner__subtitle {
+   	font-size: 16px;
+		width: 125%;
+	}
+	.banner__button {
+		font-size: 16px;
+   	width: 160px;
+		height: 50px;
+	}
+	.button__arrow {
+		vertical-align: middle;
+		margin-left: 7px;
+	}
+	.banner__oval {
+    left: 59%;
+	}
 }
