--- a/scss/_news-block.scss
+++ b/scss/_news-block.scss
@@ -35,3 +35,9 @@
 			display: block;
 			margin: 0 auto;
 		}
+
+@media screen and (max-width: 320px) {
+	.news__button-arrow {
+		margin-left: 40px;
+	}
+}
