--- a/scss/_services-block.scss
+++ b/scss/_services-block.scss
@@ -4,6 +4,9 @@
 	flex-wrap: wrap;
 	padding-bottom: 50px;
 	.services__card {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
 		flex-basis: 29%;
 		padding: 30px;
 		box-shadow: 0px 0px 77px rgba(0, 0, 0, 0.06);
@@ -41,6 +44,7 @@
    top: 0;
    bottom: 0;
    right: 0;
+	fill: #37474F;
 }
 .services__title {
 	font-size: 24px;
@@ -60,3 +64,53 @@
 		margin-left: 10px;
 		vertical-align: middle;
 	}
+
+@media screen and (max-width: 960px) {
+	.services__wrapper .services__card {
+   	padding: 20px;
+	}
+	.services__wrapper .services__icon {
+   	width: 70px;
+   	height: 70px;
+	}
+	.services__title {
+   	margin-top: 25px;
+	}
+	.services__text {
+   	line-height: 25px;
+	}
+	.services__wrapper .services__card {
+   	flex-basis: 31%;
+		margin-bottom: 40px;
+	}
+	.services__title {
+   	margin-top: 15px;
+		font-size: 21px;
+	}
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 425px) {
+	.subtitle {
+   	line-height: 30px;
+   	margin-bottom: 70px;
+	}
+	.services__wrapper {
+		flex-direction: column;
+	}
+		.services__card {
+   		padding: 30px;
+		}
+		.services__wrapper .services__card {
+   		padding: 30px;
+		}
+}
+@media screen and (max-width: 320px) {
+	.services__wrapper .services__icon {
+   	width: 60px;
+   	height: 60px;
+	}
+}
