--- a/scss/_news-block.scss
+++ b/scss/_news-block.scss
@@ -1,40 +1,76 @@
 .news {
 	padding-bottom: 124px;
 }
-	.news__wrapper {
-		@include flex-element;
+	.container__news {
+		display: flex;
+		justify-content: space-around;
 		margin-bottom: 145px;
 	}
-	.news__card {
-		max-width: 344px;
-		box-shadow: 0px 6px 42px rgba(0, 0, 0, 0.103884);
-		border-radius: 10px;
-		margin-right: 30px;
-	}
-	.news__text {
-		font-size: 22px;
-		color: #252525;
-	}
-	.news__date {
-		padding: 27px 27px 60px 27px;
-	}
-	.date {
-		margin-bottom: 16px;
-	}
-		.date__icon {
-			fill: #565656;
-			margin-right: 15px;
-			vertical-align: middle;
+		.news__card {
+			box-shadow: 0px 6px 42px rgba(0, 0, 0, 0.103884);
+			border-radius: 10px;
+			flex-basis: 28%;
 		}
-		.date__calendar {
-			vertical-align: middle;
-		}
+			.news__img {
+				width: 100%;
+				height: auto;
+			}
+			.news__text {
+				font-size: 22px;
+				color: #252525;
+			}
+			.news__date {
+				padding: 27px 27px 60px 27px;
+			}
+			.date {
+				margin-bottom: 16px;
+			}
+				.date__icon {
+					fill: #565656;
+					margin-right: 15px;
+					vertical-align: middle;
+				}
+				.date__calendar {
+					vertical-align: middle;
+				}
 		.news__button {
 			width: 226px;
 			height: 64px;
 			display: block;
 			margin: 0 auto;
 		}
+
+@media screen and (max-width: 1200px) {
+	.container__news {
+		justify-content: space-between;
+	}
+	.news__card {
+   	flex-basis: 31%;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.news {
+   	padding-bottom: 0px;
+	}
+		.news__date {
+			padding-bottom: 30px;
+		}
+			.news__text {
+				font-size: 18px;
+			}
+	}
+@media screen and (max-width: 425px) {
+	.container__news {
+		flex-direction: column;
+	}
+		.news__card {
+			margin-bottom: 30px;
+		}
+		.news__card:nth-child(3) {
+			margin-bottom: 0px;
+		}
+}
 
 @media screen and (max-width: 320px) {
 	.news__button-arrow {
