--- a/scss/_slider-coutries.scss
+++ b/scss/_slider-coutries.scss
@@ -1,12 +1,12 @@
 .countries {
-	padding-bottom: 200px;
+	padding-bottom: 125px;
 }
 	.countries__card {
-		max-width: 348px;
-		margin-right: 30px;
+		margin-bottom: 110px;
 	}
 		.countries__img {
 			margin-bottom: 27px;
+			width: 100%;
 		}
 		.countries__title {
 			font-size: 25px;
@@ -15,3 +15,9 @@
 			font-size: 16px;
 			line-height: 27px;
 		}
+
+@media screen and (max-width: 1024px) {
+	.countries {
+   	padding-bottom: 80px;
+	}
+}
