--- a/scss/_testimonials-slider.scss
+++ b/scss/_testimonials-slider.scss
@@ -2,7 +2,7 @@
 	padding-bottom: 196px;
 }
 	.testimonial__slide {
-		max-width: 503px;
+		// max-width: 503px;
 		padding: 35px;
 	}
 		.people {
@@ -25,3 +25,12 @@
 				.people__proffesion {
 					font-size: 18px;
 				}
+
+@media screen and (max-width: 320px) {
+	.testimonial__wrapper {
+   	padding-bottom: 150px;
+	}
+		.testimonial__slide {
+			padding: 10px;
+		}
+}
